modify html struture, add profile pics, nearly finish card 2 & card 3 layout

--- a/Card UI Design/index.html
+++ b/Card UI Design/index.html
@@ -15,54 +15,47 @@
         <a href="">LEARN MORE</a>
       </div>
       <div class="card2">
-        <p>Bootcamp</p>
-        <p>
-          Near, far, wherever you are I believe that the heart does go on Once more, you open the door And you're here
-          in my heart And my heart will go on and on
-        </p>
+        <p class="card2__title">Bootcamp</p>
+        <p class="card2__content">Near, far, wherever you are I believe that the heart does go on</p>
         <a href="">LEARN MORE</a>
       </div>
     </container>
     <container class="profile">
       <div class="card3">
-        <div>
-          <img src="" />
-          <div>
-            <p>Bobby Jennings</p>
-            <p>Founder & CEO.<a href="">Sketch App</a></p>
-            <div>
-              <i class="fa-solid fa-star" style="color: #ffd43b"></i>
-              <i class="fa-solid fa-star" style="color: #ffd43b"></i>
-              <i class="fa-solid fa-star" style="color: #ffd43b"></i>
-              <i class="fa-solid fa-star" style="color: #ffd43b"></i>
-              <i class="fa-solid fa-star" style="color: #ffd43b"></i>
-            </div>
+        <div class="information">
+          <img src="./images/profile1.jpg" alt="Profile picture" />
+          <p class="information__name">Bobby Jennings</p>
+          <p class="information__title">Founder & CEO. <a href="">Sketch App</a></p>
+          <div class="information__rating">
+            <i class="fa-solid fa-star" style="color: #ffd43b"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b"></i>
+            <i class="fa-solid fa-star" style="color: #ffd43b"></i>
           </div>
-          <p>
-            Near, far, wherever you are I believe that the heart does go on Once more, you open the door And you're here
-            in my heart And my heart will go on and on
-          </p>
         </div>
+        <p class="card3__content">
+          Near, far, wherever you are I believe that the heart does go on Once more, you open the door And you're here
+          in my heart And my heart will go on and on
+        </p>
       </div>
       <div class="card4">
-        <div>
-          <img src="" />
-          <div>
-            <p>Donald Bridges</p>
-            <p>Founder & CEO.<a href="">Adobe</a></p>
-            <div>
-              <i class="fa-solid fa-star" style="color: #ffffff"></i>
-              <i class="fa-solid fa-star" style="color: #ffffff"></i>
-              <i class="fa-solid fa-star" style="color: #ffffff"></i>
-              <i class="fa-solid fa-star" style="color: #ffffff"></i>
-              <i class="fa-solid fa-star" style="color: #ffffff"></i>
-            </div>
+        <div class="information">
+          <img src="./images/profile2.jpg" alt="Profile picture" />
+          <p class="information__name">Donald Bridges</p>
+          <p class="information__title">Founder & CEO.<a href="">Adobe</a></p>
+          <div class="information__rating">
+            <i class="fa-solid fa-star" style="color: #ffffff"></i>
+            <i class="fa-solid fa-star" style="color: #ffffff"></i>
+            <i class="fa-solid fa-star" style="color: #ffffff"></i>
+            <i class="fa-solid fa-star" style="color: #ffffff"></i>
+            <i class="fa-solid fa-star" style="color: #ffffff"></i>
           </div>
-          <p>
-            Near, far, wherever you are I believe that the heart does go on Once more, you open the door And you're here
-            in my heart And my heart will go on and on
-          </p>
         </div>
+        <p class="card4__content">
+          Near, far, wherever you are I believe that the heart does go on Once more, you open the door And you're here
+          in my heart And my heart will go on and on
+        </p>
       </div>
     </container>
   </body>
