add themes.scss, add flexbox to courses and profile, use mixin and extend in style.scss to simplify code

--- a/Card UI Design/index.html
+++ b/Card UI Design/index.html
@@ -25,7 +25,7 @@
         <div class="information">
           <img src="./images/profile1.jpg" alt="Profile picture" />
           <p class="information__name">Bobby Jennings</p>
-          <p class="information__title">Founder & CEO. <a href="">Sketch App</a></p>
+          <p class="information__title">Founder & CEO. <a href="">Sketch&nbspApp</a></p>
           <div class="information__rating">
             <i class="fa-solid fa-star" style="color: #ffd43b"></i>
             <i class="fa-solid fa-star" style="color: #ffd43b"></i>
