learn callback, promise, typescript

--- a/Personal Website Vanilla/index.html
+++ b/Personal Website Vanilla/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="PRO Card, professionals, graduate, CV, resume" />
+    <meta name="keywords" content="vcard, responsive, retina, resume, graduate, IT, employment, portfolio" />
+    <meta name="author" content="Kwon" />
     <title>Kwon Zhu</title>
   </head>
   <body>
@@ -10,7 +13,7 @@
       <!-- Header -->
       <header>
         <nav>
-          <div class="brand"><a href="#home">&lt;KZ&gt;</a></div>
+          <div class="brand"><a href="#top">&lt;KZ&gt;</a></div>
           <ul>
             <li><a class="nav__items" href="#home">Home</a></li>
             <li><a class="nav__items" href="#skills">Skills</a></li>
