--- a/Personal Website Vanilla/index.html
+++ b/Personal Website Vanilla/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="PRO Card, professionals, graduate, CV, resume" />
-    <meta name="keywords" content="vcard, responsive, retina, resume, graduate, IT, employment, portfolio" />
+    <meta name="description" content="A personal website for a full stack developer" />
+    <meta
+      name="description"
+      content="Welcome to Kwon's personal website. Explore my portfolio, web development projects, and more. Let's connect and create something amazing together!"
+    />
+
+    <meta name="keywords" content="responsive, resume, graduate, IT, employment, portfolio, web development" />
     <meta name="author" content="Kwon" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Kwon Zhu</title>
   </head>
   <body>
@@ -13,13 +19,13 @@
       <!-- Header -->
       <header>
         <nav>
-          <div class="brand"><a href="#top">&lt;KZ&gt;</a></div>
           <ul>
+            <li><a class="nav__items brand" href="#top">&lt;KZ&gt;</a></li>
             <li><a class="nav__items" href="#home">Home</a></li>
             <li><a class="nav__items" href="#skills">Skills</a></li>
             <li><a class="nav__items" href="#projects">Projects</a></li>
             <li><a class="nav__items" href="#contact">Contact</a></li>
-            <li><a class="nav__items">Change Theme</a></li>
+            <li><button>Change Theme</button></li>
           </ul>
           <button></button>
         </nav>
@@ -40,6 +46,7 @@
               <a href="https://github.com/KwonZhu">github</a>
             </div>
             <button><a href="#contact">Contact Me</a></button>
+            <button>Resume</button>
           </div>
           <div class="home__profile-photo">
             <img src="" alt="profile photo" />
@@ -157,6 +164,7 @@
         </div>
       </section>
     </main>
-    <nav></nav>
+    <!-- Footer -->
+    <footer>© 2024 All rights reserved. Designed by Kwon Zhu.</footer>
   </body>
 </html>
