bugfix-Prevent Overlap Between Header and Home Section, add more skills-info__technologies__card and do skills-info__technologies__card layout

--- a/Personal Website Vanilla/index.html
+++ b/Personal Website Vanilla/index.html
@@ -70,31 +70,43 @@
           </p>
           <div class="skills-info__technologies">
             <div class="skills-info__technologies__card">
-              <img src="" alt="HTML5" />
+              <img src="./images/HTML.svg" alt="HTML5" />
               <span>HTML5</span>
             </div>
             <div class="skills-info__technologies__card">
-              <img src="" alt="CSS" />
+              <img src="./images/CSS.svg" alt="CSS" />
               <span>CSS</span>
             </div>
             <div class="skills-info__technologies__card">
-              <img src="" alt="Sass" />
-              <span>Sass</span>
-            </div>
-            <div class="skills-info__technologies__card">
-              <img src="" alt="JavaScript" />
+              <img src="./images/JS.svg" alt="JavaScript" />
               <span>JavaScript</span>
             </div>
             <div class="skills-info__technologies__card">
-              <img src="" alt="Bootstrap 5.0" />
+              <img src="./images/TypeScript.svg" alt="TypeScript" />
+              <span>TypeScript</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/Sass.svg" alt="Sass" />
+              <span>Sass</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/Bootstrap.svg" alt="Bootstrap 5.0" />
               <span>Bootstrap 5.0</span>
             </div>
             <div class="skills-info__technologies__card">
-              <img src="" alt="Git" />
+              <img src="./images/Git.svg" alt="Git" />
               <span>Git</span>
             </div>
             <div class="skills-info__technologies__card">
-              <img src="" alt="NodeJs" />
+              <img src="./images/React.svg" alt="React" />
+              <span>React</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/npm.svg" alt="NPM" />
+              <span>NPM</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/NodeJs.svg" alt="NodeJs" />
               <span>NodeJs</span>
             </div>
           </div>
