refactored projects page, bugfix/project-cards can not be in a row

--- a/Personal Website Vanilla/index.html
+++ b/Personal Website Vanilla/index.html
@@ -115,36 +115,36 @@
       <!-- Projects Subpage -->
       <section class="projects" id="projects">
         <h2>Projects</h2>
-        <div class="projects-info">
-          <p class="projects-info__intro">Dive into the projects developed so far</p>
-          <div class="projects-info__card">
-            <div class="projects-info__card__image"><img src="" alt="project image" /></div>
-            <h3 class="projects-info__card__title">Portfolio</h3>
-            <p class="projects-info__card__content">This is a personal website</p>
-            <p class="projects-info__card__tech">Tech: HTML, Scss, Javascript</p>
-            <div class="projects-info__card__repository">
+        <p class="projects__intro">Dive into the projects developed so far</p>
+        <div class="projects__list">
+          <div class="projects-card">
+            <div class="projects-card__image"><img src="" alt="project image" /></div>
+            <h3 class="projects-card__title">Portfolio</h3>
+            <p class="projects-card__content">This is a personal website</p>
+            <p class="projects-card__tech">Tech: HTML, Scss, Javascript</p>
+            <div class="projects-card__repository">
               <a href="https://www.linkedin.com/in/kwonzhu" target="_blank">
                 <i class="fa-brands fa-github"></i><span>Repository</span></a
               >
             </div>
           </div>
-          <div class="projects-info__card">
-            <div class="projects-info__card__image"><img src="" alt="project image" /></div>
-            <h3 class="projects-info__card__title">Weather App</h3>
-            <p class="projects-info__card__content">This is a Weather App</p>
-            <p class="projects-info__card__tech">Tech: HTML, Scss, Javascript, React</p>
-            <div class="projects-info__card__repository">
+          <div class="projects-card">
+            <div class="projects-card__image"><img src="" alt="project image" /></div>
+            <h3 class="projects-card__title">Weather App</h3>
+            <p class="projects-card__content">This is a Weather App</p>
+            <p class="projects-card__tech">Tech: HTML, Scss, Javascript, React</p>
+            <div class="projects-card__repository">
               <a href="https://www.linkedin.com/in/kwonzhu" target="_blank">
                 <i class="fa-brands fa-github"></i><span>Repository</span></a
               >
             </div>
           </div>
-          <div class="projects-info__card">
-            <div class="projects-info__card__image"><img src="" alt="project image" /></div>
-            <h3 class="projects-info__card__title">P3</h3>
-            <p class="projects-info__card__content">This is a P3</p>
-            <p class="projects-info__card__tech">Tech: HTML, Scss, Javascript, React, .Net</p>
-            <div class="projects-info__card__repository">
+          <div class="projects-card">
+            <div class="projects-card__image"><img src="" alt="project image" /></div>
+            <h3 class="projects-card__title">P3</h3>
+            <p class="projects-card__content">This is a P3</p>
+            <p class="projects-card__tech">Tech: HTML, Scss, Javascript, React, .Net</p>
+            <div class="projects-card__repository">
               <a href="https://www.linkedin.com/in/kwonzhu" target="_blank">
                 <i class="fa-brands fa-github"></i><span>Repository</span></a
               >
