modify footer content, do footer layout

--- a/Personal Website Vanilla/index.html
+++ b/Personal Website Vanilla/index.html
@@ -179,7 +179,20 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>© 2024 All rights reserved. Designed by Kwon Zhu.</footer>
+    <footer>
+      <div class="links">
+        <div class="logo"><a href="#top">&lt;KZ&gt;</a></div>
+        <div class="social-media">
+          <a class="linkedin" href="https://www.linkedin.com/in/kwonzhu" target="_blank">
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a class="github" href="https://github.com/KwonZhu" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
+      <hr />
+      <br />
+      © 2024 All rights reserved. Designed by Kwon Zhu.
+    </footer>
   </body>
   <script src="https://kit.fontawesome.com/f8579337f5.js" crossorigin="anonymous"></script>
 </html>
