add jQuery card, adjust some margin and padding, fit up to 5 cards per row in skills

--- a/Personal Website Vanilla/index.html
+++ b/Personal Website Vanilla/index.html
@@ -82,6 +82,10 @@
               <span>JavaScript</span>
             </div>
             <div class="skills-info__technologies__card">
+              <img src="./images/jQuery.svg" alt="jQuery" />
+              <span>jQuery</span>
+            </div>
+            <div class="skills-info__technologies__card">
               <img src="./images/TypeScript.svg" alt="TypeScript" />
               <span>TypeScript</span>
             </div>
@@ -104,6 +108,26 @@
             <div class="skills-info__technologies__card">
               <img src="./images/npm.svg" alt="NPM" />
               <span>NPM</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/NodeJs.svg" alt="NodeJs" />
+              <span>NodeJs</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/Git.svg" alt="Git" />
+              <span>Git</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/React.svg" alt="React" />
+              <span>React</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/npm.svg" alt="NPM" />
+              <span>NPM</span>
+            </div>
+            <div class="skills-info__technologies__card">
+              <img src="./images/NodeJs.svg" alt="NodeJs" />
+              <span>NodeJs</span>
             </div>
             <div class="skills-info__technologies__card">
               <img src="./images/NodeJs.svg" alt="NodeJs" />
