add main.js to handle menu-btn, navbar and theme

--- a/Personal Website Vanilla/index.html
+++ b/Personal Website Vanilla/index.html
@@ -26,10 +26,10 @@
               <li><a class="navbar__item" href="#skills">Skills</a></li>
               <li><a class="navbar__item" href="#projects">Projects</a></li>
               <li><a class="navbar__item" href="#contact">Contact</a></li>
-              <li><button class="navbar__item">Change Theme</button></li>
+              <li><button class="navbar__item" onclick="themeSwitch()">Theme</button></li>
             </ul>
           </div>
-          <div class="menu-btn"><button>hamburger</button></div>
+          <div class="menu-btn"><i class="fa-solid fa-bars"></i></div>
         </nav>
       </header>
       <!-- Home Subpage -->
@@ -217,6 +217,7 @@
       <br />
       © 2024 All rights reserved. Designed by Kwon Zhu.
     </footer>
+    <script src="https://kit.fontawesome.com/f8579337f5.js" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
   </body>
-  <script src="https://kit.fontawesome.com/f8579337f5.js" crossorigin="anonymous"></script>
 </html>
